--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -108,7 +108,8 @@ excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.
 udp_whitelist=1-442, 444-65535
 # > 第一个filter为4g模式开启规则分流，第二个filter为其他wifi下开启规则分流，第三个wifi1修改成你路由器翻墙的wifi名开启直连模式，第四个wifi2为你公司或者其他有路由器翻墙的WiFi名走直连）
 # > 默认关闭根据wifi切换模式，如需开启，删除下方的"#"即可
-#running_mode_trigger=filter, filter, wifi1:all_direct, wifi2: all_direct
+running_mode_trigger=filter, filter, HONOR-yanghj:all_direct, wifi2: all_direct
+
 # > dns_exclusion_list
 dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
 
@@ -176,14 +177,9 @@ https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.re
 
 
 [server_remote]
-
+https://www.w6w.one/api/v1/client/subscribe?token=84f64659e204b06d7059ccf928aa4822, tag=自由飞, update-interval=172800, opt-parser=true, enabled=true
+https://sspanel.880219.xyz:44320/sub/246a58f28cb6ef7a/clash, tag=sspanel, update-interval=172800, opt-parser=true, enabled=true
 # > 为避免网易云解锁节点滥用，有需求的请去「墨鱼手记」公众号回复「网易云」获取
-
-
-# > 魔法仅供临时使用1
-https://raw.githubusercontent.com/Jsnzkpg/Jsnzkpg/Jsnzkpg/Jsnzkpg#delreg=.*&rename=@tg-ddgksf2021-num-+@$index0, tag=🐟临时使用, update-interval=3600, opt-parser=true, enabled=true
-# > 魔法仅供临时使用2
-https://sub.sharecentre.online/sub#delreg=.*&rename=@tg-ddgksf2021-+@num-$index7, tag=🐟临时使用, update-interval=3600, opt-parser=true, enabled=true
 
 
 
